edit and set for simulation
